--- a/src/simple-javascript-example/index.html
+++ b/src/simple-javascript-example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Debug</title>
+    <title>CSDebug</title>
     <script src="index.js"></script>
 </head>
 <body>
